wordpress/wordpress-deployment-apache.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-apache
  labels:
    app: wp-apache
spec:
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 80
  selector:
    app: wp-apache
    tier: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-apache
  labels:
    app: wp-apache
spec:
  selector:
    matchLabels:
      app: wp-apache
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wp-apache
        tier: frontend
    spec:
      containers:
      - image: wordpress:5.7.2-php8.0-apache
        name: wp-apache
        ports:
        - containerPort: 80
          name: wp-apache
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
